--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.1",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
